<resources>
    <string name="app_name">TaskMaster</string>
    <string name="MyTasks">My Tasks</string>
    <string name="AddTaskBtn">ADD TASK</string>
    <string name="AllTasksBtn">ALL TASKS</string>
    <string name="addTaskHeader">Add Task</string>
    <string name="MyTaskInput">My Task</string>
    <string name="TaskDescriptionInput">Do Something</string>
    <string name="TotalTaskCount">Total tasks:</string>
    <string name="Zero">0</string>
    <string name="Submitted">Submitted!</string>
    <string name="AllTasksHeader">All Tasks</string>
    <string name="TaskDetailHeader">Task Details</string>
    <string name="UserSettingsHeader">User Settings</string>
    <string name="UsernameTitle">Username</string>
    <string name="SaveButton">Save</string>
    <string name="SampleTask">Sample Task One</string>
    <string name="SampleTaskTwo">Sample Task Two</string>
    <string name="SampleTaskThree">Sample Task Three</string>
    <string name="LoremText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="UserSettingsButton">User Settings Button</string>
    <string name="WelcomeUsername">Welcome %1$s!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TaskStatus">Status</string>
    <string name="TeamTitle">Team</string>
    <string name="SignUp">Sign Up</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="EnterUsername">Email Address</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="SubmitInfo">Submit</string>
    <string name="VerifyEmail">Verify Email</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="Code">######</string>
    <string name="Login">Log In</string>
    <string name="LoginButton">Log In</string>
    <string name="LogoutButton">Logout</string>
    <string name="UploadImage">Upload Image</string>
    <string name="FindImage">Find Image</string>
    <string name="CityTItle" >City</string>
    <string name="LatitudeText">Latitude</string>
    <string name="LongitudeText">Longitude</string>
</resources>