...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSettingsHeaderTextView"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/usernameInputPlainText"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/usernameTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/usernameTitleTextView"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/userSettingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
...
